--- a/app/src/main/res/layout/activity_test_selection.xml
+++ b/app/src/main/res/layout/activity_test_selection.xml
@@ -19,16 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="top|left"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/buttonBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@null"
-            android:src="?attr/homeAsUpIndicator"
-            android:visibility="visible" />
-    </LinearLayout>
+        android:orientation="horizontal"/>
 
     <LinearLayout
         android:id="@+id/container1"
