--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="stred">#E6F70020</color>
     <color name="litebrown">#80530E0E</color>
     <color name="answerColor">#B71C1C</color>
+    <color name="rightAnwer">#1DD818</color>
+
 </resources>
