--- a/app/src/main/res/layout/activity_test_window.xml
+++ b/app/src/main/res/layout/activity_test_window.xml
@@ -17,6 +17,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        app:layout_constraintStart_toEndOf="@id/buttonImage"
+        app:layout_constraintEnd_toStartOf="@id/buttonDescription"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="181dp"
+        tools:layout_editor_absoluteY="18dp" />
+
     <Button
         android:id="@+id/buttonPrevios"
         android:layout_width="wrap_content"
