все за 27ое марта

--- a/app/src/main/res/layout/activity_test_window.xml
+++ b/app/src/main/res/layout/activity_test_window.xml
@@ -142,11 +142,10 @@
         android:layout_height="0dp"
         android:background="@drawable/style_task_field"
         android:gravity="center_horizontal"
-
         android:padding="8dp"
-        android:text="TextViewadsssssssssssssssssssssssssssfsddfhajkfhakfjaklckncmncajksncjkanjcnasckadajnajkadjcknadjkcnjadknc"
         android:textColor="@android:color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/radioButtons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
