--- a/app/src/main/res/layout/activity_network_selection.xml
+++ b/app/src/main/res/layout/activity_network_selection.xml
@@ -7,7 +7,7 @@
     tools:context=".New.NetworkActivities.NetworkSelection">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/networkBackground"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/networkbackground"
@@ -16,4 +16,40 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonJoin"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/style_btn_start"
+        android:text="@string/join_ru"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4" />
+
+    <Button
+        android:id="@+id/buttonCreate"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/style_btn_start"
+        android:text="@string/create_ru"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <Button
+        android:id="@+id/buttonConstructor"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/style_btn_start"
+        android:text="@string/contructor_ru"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
