--- a/app/src/main/res/layout/activity_constructor.xml
+++ b/app/src/main/res/layout/activity_constructor.xml
@@ -16,12 +16,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/questionList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:choiceMode="multipleChoice"
         android:padding="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
