--- a/app/src/main/res/layout/activity_list_of_tests.xml
+++ b/app/src/main/res/layout/activity_list_of_tests.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".New.TestConstructor.Activity.ListOfTestsActivity">
+    tools:context=".ui.ListOfTestsActivity">
 
     <LinearLayout
         android:id="@+id/container1"
