--- a/app/src/main/res/layout/activity_network_selection.xml
+++ b/app/src/main/res/layout/activity_network_selection.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".New.NetworkActivities.NetworkSelection">
+    tools:context=".ui.NetworkSelection">
 
     <ImageView
         android:id="@+id/networkBackground"
