--- a/app/src/main/res/layout/activity_test_window.xml
+++ b/app/src/main/res/layout/activity_test_window.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e0e0e0"
-    tools:context=".Eastory2.OldVersion.TestActivities.TestWindow">
+    tools:context=".ui.TestWindow">
 
     <ImageView
         android:id="@+id/testBackground"
