added files via upload

--- a/app/src/main/res/layout/activity_network_selection.xml
+++ b/app/src/main/res/layout/activity_network_selection.xml
@@ -2,20 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/networkselection_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.NetworkSelection">
-
-    <ImageView
-        android:id="@+id/networkBackground"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/networkbackground"
-        android:src="@drawable/networkbackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonJoin"
